istio/deployment/4-timeout-retries-circuitbreaker.yaml
---
# Namespace is the logical segregation of the spaces. This can be useful for segregating the nucleus products.
apiVersion: v1
kind: Namespace
metadata:
  name: piyush-poc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reorgservice-deployment-v1
  namespace: piyush-poc
  labels:
    app: reorgservice-deployment
    env: ED
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reorgservice-pod
      deployEnvironment: ED
      product: memeboot
      version: v1

  template:
    metadata:
      name: reorgservice-pod-v1
      labels:
        app: reorgservice-pod
        deployEnvironment: ED
        product: memeboot
        version: v1
    spec:
      containers:
        - name: reorgservice-container-v1
          image: docker-nucleus.getgotools.net/memeboot/reorg-test-service:eks-poc
          imagePullPolicy: IfNotPresent # It can have possible values as Never, Always and IfNotPresent
#          resources:
#            requests:
#              cpu: 512m # This is required by hpa. To see the autosaling change it to 512m
#              memory: 512Mi
#            limits:
#              cpu: 512m
#              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service2 # The name is very important for service discovery.
  namespace: piyush-poc
  labels:
    forapp: reorgservice
    product: memeboot
    deployEnvironment: ED
spec:
  selector:
    app: reorgservice-pod
  type: ClusterIP # By default service is of type ClusterIP. Just for understanding of new developer added this value.
  ports:
    - name: http-service2
      port: 9998
      targetPort: 9998
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memebootservice-deployment-v1
  namespace: piyush-poc
  labels:
    app: memebootservice-deployment
    env: ED
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memebootservice-pod
      deployEnvironment: ED
      product: memeboot
      version: v1
  template:
    metadata:
      name: memebootservice-pod-v1
      namespace: piyush-poc
      labels:
        app: memebootservice-pod
        deployEnvironment: ED
        product: memeboot
        version: v1

    spec:
      containers:
        - name: memebootservice-container-v1
          image: docker-nucleus.getgotools.net/memeboot/memebootservice:eks-poc
          imagePullPolicy: IfNotPresent # It can have possible values as Never, Always and IfNotPresent
#          resources:
#            requests:
#              cpu: 512m # This is required by hpa. To see the autosaling change it to 512m
#              memory: 512Mi
#            limits:
#              cpu: 512m
#              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mymemebootservice # The name is very important for service discovery.
  namespace: piyush-poc
  labels:
    forapp: memebootservice
    product: memeboot
    deployEnvironment: ED
spec:
  selector:
    app: memebootservice-pod
  ports:
    - name: http-mymemebootservice
      port: 9999
      targetPort: 9999
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
  namespace: piyush-poc
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mymemebootservice-vs
  namespace: piyush-poc
spec:
  hosts:
    - "*"
  gateways:
    - common-gateway
  http:
    - match:
        - uri:
            prefix: /memebootservice/
      rewrite:
        uri: /
      route:
        - destination:
            host: mymemebootservice.piyush-poc.svc.cluster.local
            subset: v1
            port:
              number: 9999
      timeout: 15s # You can set the timeout for the mymemebootservice
      retries:
        attempts: 4
        perTryTimeout: 3s
---
# To test the circuit breaking run following command :
# 1. FORTIO_POD=$(kubectl get pod | grep fortio | awk '{ print $1 }')
#    kubectl exec -it $FORTIO_POD  -c fortio /usr/bin/fortio -- load -c 1 -qps 0 -n 20 -loglevel Warning http://mymemebootservice:9999/hello
# OR kubectl exec -it $FORTIO_POD  -c fortio /usr/bin/fortio -- load -c 1 -qps 0 -n 20 -loglevel Warning http://192.168.99.105:31380/memebootservice/hello
# This above commands will not do any circuit breaking since as
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mymemebootservice-dr
  namespace: piyush-poc
spec:
  host: mymemebootservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1 # size of the request queue for the front end
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 3
      interval: 4s # intervel window between the two circuit breakers
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  labels:
    app: fortio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fortio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      annotations:
        # This annotation causes Envoy to serve cluster.outbound statistics via 15000/stats
        # in addition to the stats normally served by Istio.  The Circuit Breaking example task
        # gives an example of inspecting Envoy stats.
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest_release
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
